[gd_scene load_steps=25 format=3 uid="uid://bkvt478ad5sxw"]

[ext_resource type="Script" path="res://scenes/entities/guard.gd" id="1_rvai5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_6vs15"]
[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/components/health-component.gd" id="2_yvxfr"]
[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/components/burnable-component.gd" id="3_dd5jr"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_fa2tq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="3_y26qf"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_hta20"]
[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/components/character-movement-3d.gd" id="4_p7vnv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="5_yijun"]
[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/components/move_stats.gd" id="6_186tv"]
[ext_resource type="Script" path="res://addons/godot_state_charts/animation_player_state.gd" id="7_xwxxp"]
[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/components/knockback-component.gd" id="10_v56ec"]

[sub_resource type="Resource" id="Resource_vfyl3"]
script = ExtResource("6_186tv")
speed = 25.0
jump_height = 5.0
acceleration = 10.0
air_acceleration = 2.0
apply_acceleration = true
apply_air_acceleration = false

[sub_resource type="CapsuleMesh" id="CapsuleMesh_36vy4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ww1hd"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_stfgo"]

[sub_resource type="BoxMesh" id="BoxMesh_jq2f4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x1lrb"]
albedo_color = Color(0.219608, 0.219608, 0.219608, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_jpehw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_fuoqq"]

[sub_resource type="Animation" id="Animation_eqrg6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/MeshInstance3D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.612725, 1.41668, 0.448583)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node3D/MeshInstance3D2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.319517, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8tble"]
resource_name = "Swing"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/MeshInstance3D2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.612725, 1.41668, 0.448583)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node3D/MeshInstance3D2:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.319517, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node3D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -1.5708), Vector3(0, 3.05433, -1.5708)]
}

[sub_resource type="Animation" id="Animation_brdyu"]
resource_name = "Walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p5bk0"]
_data = {
"RESET": SubResource("Animation_eqrg6"),
"Swing": SubResource("Animation_8tble"),
"Walk": SubResource("Animation_brdyu")
}

[node name="Guard" type="CharacterBody3D" groups=["burnable"]]
script = ExtResource("1_rvai5")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_6vs15")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("3_y26qf")

[node name="Actions" type="Node" parent="StateChart/Root"]
script = ExtResource("3_fa2tq")
initial_state = NodePath("Pursue")

[node name="Pursue" type="Node" parent="StateChart/Root/Actions"]
script = ExtResource("4_hta20")

[node name="PursueToSwing" type="Node" parent="StateChart/Root/Actions/Pursue"]
script = ExtResource("5_yijun")
to = NodePath("../../Swing")
event = &"pursue_to_swing"

[node name="Swing" type="Node" parent="StateChart/Root/Actions"]
script = ExtResource("4_hta20")

[node name="SwingToPursue" type="Node" parent="StateChart/Root/Actions/Swing"]
script = ExtResource("5_yijun")
to = NodePath("../../Pursue")
event = &"swing_to_pursue"

[node name="Animations" type="Node" parent="StateChart/Root"]
script = ExtResource("3_fa2tq")
initial_state = NodePath("Walk")

[node name="Walk" type="Node" parent="StateChart/Root/Animations"]
script = ExtResource("7_xwxxp")
animation_player = NodePath("../../../../AnimationPlayer")

[node name="WalkToSwing" type="Node" parent="StateChart/Root/Animations/Walk"]
script = ExtResource("5_yijun")
to = NodePath("../../Swing")
event = &"pursue_to_swing"

[node name="Swing" type="Node" parent="StateChart/Root/Animations"]
script = ExtResource("7_xwxxp")
animation_player = NodePath("../../../../AnimationPlayer")

[node name="SwingToWalk" type="Node" parent="StateChart/Root/Animations/Swing"]
script = ExtResource("5_yijun")
to = NodePath("../../Walk")
event = &"swing_to_pursue"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_yvxfr")
max_health = 300.0
_health = 300.0

[node name="BurnableComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "burn_timer", "mesh")]
script = ExtResource("3_dd5jr")
actor = NodePath("..")
burn_timer = NodePath("Timer")
use_3d_burn_effects = true
mesh = NodePath("../MeshInstance3D")

[node name="Timer" type="Timer" parent="BurnableComponent"]

[node name="CharacterMovement3D" type="Node3D" parent="." node_paths=PackedStringArray("character")]
script = ExtResource("4_p7vnv")
character = NodePath("..")
move_stats = SubResource("Resource_vfyl3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_36vy4")
surface_material_override/0 = SubResource("StandardMaterial3D_ww1hd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_stfgo")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 3.0
avoidance_enabled = true

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.362473, 0)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(0.10463, 0, 0, 0, 1.93983, -0.10175, 0, 0.6418, 0.307537, 0.612725, 1.41668, 0.448583)
mesh = SubResource("BoxMesh_jq2f4")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_x1lrb")

[node name="KnockbackComponent3D" type="Area3D" parent="Node3D/MeshInstance3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 3.72529e-09, 0, 0, 1, 0, 0.997358, -2.38419e-07)
script = ExtResource("10_v56ec")
x_scale = -1.0
y_scale = -1.0
z_scale = -1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Node3D/MeshInstance3D2/KnockbackComponent3D"]
transform = Transform3D(1, 0, 0, 0, 1, 3.72529e-09, 0, 1.19209e-07, 1, 0, -0.997358, 1.19209e-07)
shape = SubResource("BoxShape3D_jpehw")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Node3D/MeshInstance3D2"]
transform = Transform3D(0.854101, 5.96046e-08, -3.72529e-09, -2.32831e-10, 0.446504, 1.86265e-09, -1.86265e-09, -1.78814e-07, 0.367085, -5.96046e-08, -0.659136, 2.08616e-07)
mesh = SubResource("BoxMesh_jq2f4")
skeleton = NodePath("../../..")

[node name="ShapeCast3D" type="ShapeCast3D" parent="Node3D"]
transform = Transform3D(0.10463, 0, 0, 0, 1.93983, -0.10175, 0, 0.641802, 0.307537, 0.612725, 3.35139, 1.08869)
shape = SubResource("BoxShape3D_fuoqq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p5bk0")
}
autoplay = "Walk"

[connection signal="state_physics_processing" from="StateChart/Root/Actions/Pursue" to="." method="_on_pursue_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Actions/Swing" to="." method="_on_swing_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/Actions/Swing" to="." method="_on_swing_state_physics_processing"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
